tests/paczka1/fuzzy1/82839410.err
Error in line 1: 9LdDEBd S478 9,63
Error in line 3: 9LdDEBd S478 14,3
Error in line 10: ClUjiEb7kuv A230 47,8
Error in line 16: EHw S969 34,8
Error in line 25: EHw S478 266,79
Error in line 37: qBs S969 38,30
Error in line 22: EHw S478 59,7
